New comment added

--- a/sat/3d/index.html
+++ b/sat/3d/index.html
@@ -9,6 +9,8 @@
 <script type="text/javascript" src="glMatrix-0.9.5.min.js"></script>
 <script type="text/javascript" src="webgl-utils.js" ></script>
 
+<!-- A new comment from Lucymu -->
+
 <script id="shader-vs" type="x-shader/x-vertex">
 	attribute vec3 aVertexPosition;
 	attribute vec3 aVertexNormal;
