--- a/sat/interhelios/index.html
+++ b/sat/interhelios/index.html
@@ -3,7 +3,7 @@
 <title>
 INTERHELIOS PROJECT
 </title>
-<link href="../../aux/style.css" rel="stylesheet" type="text/css">
+<link href="../../meta/style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 <table width="600" align="center" cellpadding="0" cellspacing="0">
