--- a/sat/interhelios/index_ru.html
+++ b/sat/interhelios/index_ru.html
@@ -4,7 +4,7 @@
 <title>
 ПРОЕКТ "ИНТЕРГЕЛИОС"
 </title>
-<link href="../../aux/style.css" rel="stylesheet" type="text/css">
+<link href="../../meta/style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 <table width="600" align="center" cellpadding="0" cellspacing="0">
